--- a/scripts/luigi.cfg
+++ b/scripts/luigi.cfg
@@ -14,7 +14,8 @@ drop_columns = []
 
 [TrainStratifiedKFold]
 random_state = ${RANDOM_STATE}
-params = {"objective": "regression", "learning_rates": 0.1, "metric": "auc", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
+# params = {"objective": "regression", "learning_rates": 0.1, "metric": "auc", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
+params = {"objective": "binary", "learning_rates": 0.1, "metric": "auc", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
 model_type = lgb
 
 [Predict]
