pre commitのシェル作成

--- a/scripts/luigi.cfg
+++ b/scripts/luigi.cfg
@@ -6,6 +6,11 @@ random_state = ${RANDOM_STATE}
 # features = ["Target","RtpStateBitfield"]
 features = []
 
+[GetFold]
+fold_type = sf
+n_splits = 5
+random_state = ${RANDOM_STATE}
+
 [Preprocess]
 n_split = 5
 random_state = ${RANDOM_STATE}
