--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ flake8 = "^3.7.9"
 jupyterlab_code_formatter = "^1.1.0"
 thunderbolt = "^0.0.22"
 kaggle = "^1.5.6"
+isort = "^4.3.21"
 
 [build-system]
 requires = ["poetry>=0.12"]
