--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scikit-learn = "^0.22.1"
 luigi = "^2.8.11"
 gokart = "^0.3.11"
 python-dotenv = "^0.11.0"
+category-encoders = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^1.2.6"
