その他targetを使うEncode実装

--- a/scripts/luigi.cfg
+++ b/scripts/luigi.cfg
@@ -27,5 +27,17 @@ model_type = lgb
 target_columns = ${CATEGORICAL_COLUMNS}
 smoothing = 0.2
 
+[CatBoostEncode]
+target_columns = ${CATEGORICAL_COLUMNS}
+
+[JamesSteinEncode]
+target_columns = ${CATEGORICAL_COLUMNS}
+
+[MEstimateEncoder]
+target_columns = ${CATEGORICAL_COLUMNS}
+
+[WOEEncoder]
+target_columns = ${CATEGORICAL_COLUMNS}
+
 [Predict]
 random_state = ${RANDOM_STATE}
