Target use feature (#10)
* 抽象基底クラスを作って書き換え

* その他targetを使うEncode実装

--- a/scripts/luigi.cfg
+++ b/scripts/luigi.cfg
@@ -23,5 +23,21 @@ random_state = ${RANDOM_STATE}
 params = {"objective": "binary", "learning_rates": 0.1, "metric": "auc", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
 model_type = lgb
 
+[TargetEncode]
+target_columns = ${CATEGORICAL_COLUMNS}
+smoothing = 0.2
+
+[CatBoostEncode]
+target_columns = ${CATEGORICAL_COLUMNS}
+
+[JamesSteinEncode]
+target_columns = ${CATEGORICAL_COLUMNS}
+
+[MEstimateEncoder]
+target_columns = ${CATEGORICAL_COLUMNS}
+
+[WOEEncoder]
+target_columns = ${CATEGORICAL_COLUMNS}
+
 [Predict]
 random_state = ${RANDOM_STATE}
