--- a/scripts/luigi.cfg
+++ b/scripts/luigi.cfg
@@ -17,10 +17,14 @@ random_state = ${RANDOM_STATE}
 use_columns = []
 drop_columns = []
 
+[TuningLGB]
+random_state=${RANDOM_STATE}
+
 [TrainStratifiedKFold]
 random_state = ${RANDOM_STATE}
-# params = {"objective": "regression", "learning_rates": 0.1, "metric": "auc", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
-params = {"objective": "binary", "learning_rates": 0.1, "metric": "auc", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
+# params = {"objective": "binary", "learning_rates": 0.01, "metric": "auc", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
+# params = {"objective": "binary", "learning_rates": 0.01, "metric": "binary", "num_leaves": 32, "min_data_in_leaf": 32, "max_depth": 8}
+params = {"objective": "binary", "learning_rates": 0.01, "metric": "binary", "lambda_l1": 0.010078389989467947, "lambda_l2": 4.5248331776487917e-07, "num_leaves": 3, "feature_fraction": 0.4, "bagging_fraction": 0.969148612680824, "bagging_freq": 3, "min_child_samples": 20}
 model_type = lgb
 
 [TargetEncode]
