100個のモデルを走らせるタスクの実装

--- a/scripts/luigi.cfg
+++ b/scripts/luigi.cfg
@@ -45,3 +45,7 @@ target_columns = ${CATEGORICAL_COLUMNS}
 
 [Predict]
 random_state = ${RANDOM_STATE}
+
+[_TrainModelForNullImportance]
+random_state = ${RANDOM_STATE}
+params = {"objective": "binary", "learning_rates": 0.01, "metric": "binary", "lambda_l1": 0.010078389989467947, "lambda_l2": 4.5248331776487917e-07, "num_leaves": 3, "feature_fraction": 0.4, "bagging_fraction": 0.969148612680824, "bagging_freq": 3, "min_child_samples": 20}
