--- a/scripts/luigi.cfg
+++ b/scripts/luigi.cfg
@@ -28,7 +28,9 @@ random_state = ${RANDOM_STATE}
 # null importanceしたやつ
 # params = {"objective": "binary","learning_rate": 0.01,"metric": "binary","lambda_l1": 0.47475707851038346, "lambda_l2": 7.393120515287501, "num_leaves": 2, "feature_fraction": 0.6479999999999999, "bagging_fraction": 1.0, "bagging_freq": 0, "min_child_samples": 100}
 # 全部使ったやつ
-params = {"objective": "binary","learning_rate": 0.01,"metric": "binary","lambda_l1": 0.0, "lambda_l2": 0.0, "num_leaves": 3, "feature_fraction": 0.7, "bagging_fraction": 0.913193379727163, "bagging_freq": 6, "min_child_samples": 20}
+# params = {"objective": "binary","learning_rate": 0.01,"metric": "binary","lambda_l1": 0.0, "lambda_l2": 0.0, "num_leaves": 3, "feature_fraction": 0.7, "bagging_fraction": 0.913193379727163, "bagging_freq": 6, "min_child_samples": 20}
+# ord_5新しいよ
+params = {"objective": "binary","learning_rate": 0.01,"metric": "binary","lambda_l1": 0.008326236276901882,"lambda_l2": 6.599312336484268,"num_leaves": 3,"feature_fraction": 0.5,"bagging_fraction": 0.9094149008241834,"bagging_freq": 5,"min_child_samples": 50}
 
 model_type = lgb 
 [TargetEncode]
