--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^0.11.0"
 category-encoders = "^2.1.0"
 optuna = "^1.1.0"
 nyaggle = {git = "https://github.com/nyanp/nyaggle.git", rev = "master"}
+mlflow = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^1.2.6"
